tests/sksl/errors/ConstructorArgumentCount.glsl
### Compilation failed:

error: 1: invalid arguments to 'float3' constructor (expected 3 scalars, but found 2)
error: 2: invalid arguments to 'float3' constructor (expected 3 scalars, but found 4)
error: 3: 'int3' is not a valid parameter to 'bool' constructor
3 errors
